--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-slick": "^0.28.1",
+    "react-xml-parser": "^1.1.8",
     "slick-carousel": "^1.8.1",
     "twilio": "^3.72.0"
   },
